# grasshopper-extractor

./: .gitignore  ADDING_NEW_COMPONENTS.md  ALL_ERRORS_FIXED_SUMMARY.md  ANGLE_CHAIN_DIAGNOSIS.md  ANGLE_ISSUE_ANALYSIS.md  ANGLE_VALUES_COMPARISON.md  AREA_CENTROID_FIX_SUMMARY.md  BUGS_FIXED_SUMMARY.md  CENTROID_FIX_SUMMARY.md  CMakeLists.txt  CONSTRUCT_PLANE_AND_PLANE_NORMAL_FIX.md  CONSTRUCT_POINT_FIX.md  CONTEXT_SUMMARY.md  CURRENT_STATUS.md  DL_POINTS_ISSUE.md  ENHANCED_RESULTS_FORMAT.md  EVALUATE_SURFACE_FIX_SUMMARY.md  EVALUATOR_STATUS_COMPLETE.md  EXAMPLE_PANEL_TRACE.md  EXPRESSION_AND_PLANE_ISSUES.md  EXTERNAL_INPUTS_EXTRACTION_SUMMARY.md  FILE_INVENTORY.md  FINAL_EVALUATION_SUMMARY.txt  FINAL_VALIDATION_REPORT.md  FULL_PROJECT_EVALUATION_REPORT.md  GHX_VERIFICATION_SUMMARY.md  GRAFTING_FIX_COMPLETE.md  INVESTIGATION_COMPLETE.md  LIST_ITEM_VERIFICATION.md  MOVE_CENTROID_CHAIN_ISSUES.md  NEXT_STEPS.md  NONE_VALUES_ANALYSIS.md  NONE_VALUES_COMPLETE_TRACE.md  PHASE_1_TO_5_SUMMARY.md  PLANE_NORMAL_FIX_SUMMARY.md  PLANE_NORMAL_WIRING_ISSUE.md  POLAR_ARRAY_VERIFICATION.md  POLYGON_VERIFICATION.md  PROJECT_STATUS.md  PROMPT_ADD_SUN_COMPONENTS.md  (+164 more)
arduino_mega_project/: BUILD_NOTES.md  GBR_SCT_Salsburgh.031520_TMYx.epw  PROJECT_SUMMARY.md  README.md  arduino_mega_project.ino
c_components/: Angle.c  Angle.h  Area.c  Area.h  Circle.c  Circle.h  ConstructPlane.c  ConstructPlane.h  ConstructPoint.c  CurveCurve.c  CurveCurve.h  Degrees.c  Degrees.h  Division.c  Division.h  DownloadWeather.c  ExplodeTree.c  ExplodeTree.h  ImportEPW.c  Line.c  Line.h  ListItem.h  Move.c  Move.h  Negative.c  Negative.h  PlaneNormal.c  PlaneNormal.h  PolyLine.c  PolyLine.h  Project.c  Project.h  Rotate.c  Rotate.h  Subtraction.c  Subtraction.h  SunPath.c  SunPath.h  UnitY.c  UnitY.h  (+8 more)
legacy/: evaluate_sun_and_rotatingslats.py  show_sample_results.py  (+6 more)
(+95 files in other folders)
